--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Prototype/macros.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Prototype/macros.html.twig
@@ -37,9 +37,11 @@
             <td>{{ prototype.updatedAt|date }}</td>
             <td>
                 <div class="pull-right">
-                {{ buttons.show(path('sylius_backend_prototype_build', {'id': prototype.id}), 'sylius.prototype.build'|trans) }}
-                {{ buttons.edit(path('sylius_backend_prototype_update', {'id': prototype.id})) }}
-                {{ buttons.delete(path('sylius_backend_prototype_delete', {'id': prototype.id})) }}
+                    <div class="btn-group btn-group-sm">
+                        {{ buttons.show(path('sylius_backend_prototype_build', {'id': prototype.id}), 'sylius.prototype.build'|trans) }}
+                        {{ buttons.edit(path('sylius_backend_prototype_update', {'id': prototype.id})) }}
+                    </div>
+                    {{ buttons.delete(path('sylius_backend_prototype_delete', {'id': prototype.id})) }}
                 </div>
             </td>
         </tr>
