--- a/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/latestSidebar.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/latestSidebar.html.twig
@@ -1,12 +1,14 @@
-<h4>{{ 'Рекомендованные товары'|trans }}</h4>
+{% if products|length > 0 %}
+    <h4>{{ 'Рекомендованные товары'|trans }}</h4>
 
-<ul>
-    {% for product in products %}
-        <li>
-            <a href="{{ path('sylius_product_show', {'slug': product.slug}) }}" class="btn btn-link">
-                <img class="thumbnail" src="{{ product.image ? product.image.path|imagine_filter('sylius_50x40') : 'http://placehold.it/50x40/D7BB79/AF8524' }}" alt="{{ product.name }}" />
-                <h4>{{ product.name }}</h4>
-            </a>
-        </li>
-    {% endfor %}
-</ul>
+    <ul>
+        {% for product in products %}
+            <li>
+                <a href="{{ path('sylius_product_show', {'slug': product.slug}) }}" class="btn btn-link">
+                    <img class="thumbnail" src="{{ product.image ? product.image.path|imagine_filter('sylius_50x40') : 'http://placehold.it/50x40/D7BB79/AF8524' }}" alt="{{ product.name }}" />
+                    <h4>{{ product.name }}</h4>
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+{% endif %}
