--- a/src/Sylius/Bundle/WebBundle/Resources/assets/css/frontend.css
+++ b/src/Sylius/Bundle/WebBundle/Resources/assets/css/frontend.css
@@ -63,6 +63,12 @@ a {
 .shop-menu .navbar-nav > .open > a:hover {
     background-color: transparent!important;
 }
+.side-menu a.expandable.expanded .icon-angle-right::before {
+    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+}
 .shop-info.white {
     background: #ffffff url(/bundles/syliusweb/img/main/pattern-759l.png) repeat!important;
     box-shadow: 0 0 9px #000!important;
