--- a/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/show.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/show.html.twig
@@ -50,71 +50,25 @@
         </table>
         {% endif %}
     </div>
-</div>
-<hr>
-{# <div class="row">
-    <form action="{{ path('sylius_cart_item_add', {'id': product.id}) }}" method="post" class="clearfix form-horizontal">
-    {% if product.hasVariants %}
-        <div class="col-md-6">
-            {% if product.isVariantSelectionMethodChoice %}
+    <div class="col-md-6">
+        {% if product.options|length > 0 %}
             <table class="table table-condensed">
                 <thead>
                     <tr>
-                        <th></th>
-                        <th>{{ 'sylius.variant.price'|trans }}</th>
-                        <th></th>
+                        <th colspan="2">{{ 'sylius.product.options'|trans }}</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for variant in product.variants if variant.available %}
+                    {% for option in product.options %}
                     <tr>
-                        <td>
-                            {% if variant.presentation is empty %}
-                            <ul class="unstyled">
-                                {% for option in variant.options %}
-                                <li><strong>{{ option.presentation }}</strong>: {{ option.value }}</li>
-                                {% endfor %}
-                            </ul>
-                            {% else %}
-                                {{ variant.presentation }}
-                            {% endif %}
-                        </td>
-                        <td>
-                            <span class="label label-success">{{ variant.price|sylius_price }}</span>
-                        </td>
-                        <td>
-                        {% if sylius_inventory_is_available(variant) %}
-                            {{ form_widget(form.variant[loop.index0]) }}
-                        {% else %}
-                            <span class="label label-important">{{ 'sylius.out_of_stock'|trans }}</span>
-                        {% endif %}
-                        </td>
+                        <td>{{ option.presentation }}</td>
+                        <td>{{ option.values|join(', ') }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
-            {% else %}
-                <div class="well clearfix">
-                    {{ form_widget(form.variant) }}
-                </div>
-            {% endif %}
-        </div>
-    {% endif %}
-    <div class="col-md-6 pull-right">
-        {% if not product.hasVariants and not sylius_inventory_is_available(product.masterVariant) %}
-            <span class="label label-important">{{ 'sylius.out_of_stock'|trans }}</span>
-        {% else %}
-            {{ form_row(form.quantity, {'attr': {'class': 'center-text'}, 'empty_value': '1'}) }}
-            {{ form_widget(form._token) }}
-            <br>
-            <br>
-            {% if sylius_is_restricted(product) %}
-            <button disabled="disabled" class="btn btn-success btn-lg btn-block"><i class="icon-shopping-cart icon-white icon-large"></i> {{ 'sylius.product_not_available_in_zone'|trans }}</button>
-            {% else %}
-                <button type="submit" class="btn btn-success btn-lg btn-block"><i class="icon-shopping-cart icon-white icon-large"></i> {{ 'sylius.add_to_cart'|trans }}</button>
-            {% endif %}
         {% endif %}
     </div>
-</form>
-</div> #}
+</div>
+<hr>
 {% endblock %}
